| Bug #35498 | Cannot get table test/table1 auto-inccounter value in ::info | ||
|---|---|---|---|
| Submitted: | 22 Mar 2008 5:51 | Modified: | 20 Jun 2010 0:53 |
| Reporter: | Shane Bester (Platinum Quality Contributor) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.22, 5.1.30, 5.0.45 | OS: | Any |
| Assigned to: | Sunny Bains | CPU Architecture: | Any |
| Tags: | CREATE TABLE LIKE, SHOW CREATE TABLE, show table status | ||
[22 Mar 2008 7:17]
MySQL Verification Team
I also saw these errors: 080322 9:09:01080322 9:09:01 [ERROR] Error 15 in ::get_auto_increment() 080322 9:09:56080322 9:09:56 [ERROR] Error 35 in ::get_auto_increment() #define DB_DEADLOCK 15 #define DB_LOCK_WAIT_TIMEOUT 35
[25 Mar 2008 16:30]
Heikki Tuuri
Sunny, what could have broken this? --Heikki
[26 Mar 2008 22:14]
Sunny Bains
Regarding errors DB_DEADLOCK and DB_LOCK_WAIT_TIMEOUT these are normal, I will add a conditional to not print these two errors. The other error "Cannot get table test/table1 auto-inccounter value in ::info", I haven't seen that before and will investigate. -sunny
[12 Mar 2009 21:23]
Paul DuBois
Noted in 5.1.31, 6.0.10 changelogs. InnoDB could fail to generate AUTO_INCREMENT values if rows previously had been inserted containing literal values for the AUTO_INCREMENT column.
[5 May 2010 15:10]
Bugs System
Pushed into 5.1.47 (revid:joro@sun.com-20100505145753-ivlt4hclbrjy8eye) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[6 May 2010 14:09]
Paul DuBois
Push resulted from incorporation of InnoDB tree. No changes pertinent to this bug. Re-closing.
[28 May 2010 6:04]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (pib:16)
[28 May 2010 6:33]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[28 May 2010 7:01]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[29 May 2010 22:59]
Paul DuBois
Push resulted from incorporation of InnoDB tree. No changes pertinent to this bug. Re-closing.
[15 Jun 2010 8:12]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100615080459-smuswd9ooeywcxuc) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (merge vers: 5.1.47) (pib:16)
[15 Jun 2010 8:28]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100615080558-cw01bzdqr1bdmmec) (version source revid:mmakela@bk-internal.mysql.com-20100415070122-1nxji8ym4mao13ao) (pib:16)
[17 Jun 2010 12:09]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 12:55]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:36]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)

Description: I found the following errors in the error log: Version: '5.1.22-rc-community' socket: '' port: 3306 MySQL Community Server (GPL) 080322 4:59:57080322 4:59:57 [ERROR] Cannot get table test/table1 auto-inccounter value in ::info 080322 5:02:58080322 5:02:58 [ERROR] Cannot get table test/table1 auto-inccounter value in ::info 080322 5:51:02080322 5:51:02 [ERROR] Cannot get table test/table1 auto-inccounter value in ::info 080322 6:13:00080322 6:13:01 [ERROR] Cannot get table test/table1 auto-inccounter value in ::info strange, because in the code I see this: /* The following function call can the first time fail in a lock wait timeout error because it reserves the auto-inc lock on the table. If it fails, then someone is already initing the auto-inc counter, and the second call is guaranteed to succeed. */ ret = innobase_read_and_init_auto_inc(&auto_inc); if (ret != 0) { ret = innobase_read_and_init_auto_inc(&auto_inc); if (ret != 0) { sql_print_error("Cannot get table %s auto-inc" "counter value in ::info\n", ib_table->name); auto_inc = 0; } } How to repeat: will provide testcase later.